--- a/QuickPoseMP.xcframework/Info.plist
+++ b/QuickPoseMP.xcframework/Info.plist
@@ -6,12 +6,11 @@
 	<array>
 		<dict>
 			<key>LibraryIdentifier</key>
-			<string>ios-arm64_x86_64-simulator</string>
+			<string>ios-x86_64-simulator</string>
 			<key>LibraryPath</key>
 			<string>QuickPoseMP.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
-				<string>arm64</string>
 				<string>x86_64</string>
 			</array>
 			<key>SupportedPlatform</key>
