--- a/QuickPoseMP.xcframework/Info.plist
+++ b/QuickPoseMP.xcframework/Info.plist
@@ -5,6 +5,8 @@
 	<key>AvailableLibraries</key>
 	<array>
 		<dict>
+			<key>BinaryPath</key>
+			<string>QuickPoseMP.framework/QuickPoseMP</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-x86_64-simulator</string>
 			<key>LibraryPath</key>
@@ -19,6 +21,8 @@
 			<string>simulator</string>
 		</dict>
 		<dict>
+			<key>BinaryPath</key>
+			<string>QuickPoseMP.framework/QuickPoseMP</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
