--- a/QuickPoseCore.xcframework/ios-arm64_x86_64-simulator/QuickPoseCore.framework/Info.plist
+++ b/QuickPoseCore.xcframework/ios-arm64_x86_64-simulator/QuickPoseCore.framework/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>23C71</string>
+	<string>24C101</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,29 +17,29 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.9</string>
+	<string>1.2.10</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>iPhoneSimulator</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.2.9</string>
+	<string>1.2.10</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>21F77</string>
+	<string>22C146</string>
 	<key>DTPlatformName</key>
 	<string>iphonesimulator</string>
 	<key>DTPlatformVersion</key>
-	<string>17.5</string>
+	<string>18.2</string>
 	<key>DTSDKBuild</key>
-	<string>21F77</string>
+	<string>22C146</string>
 	<key>DTSDKName</key>
-	<string>iphonesimulator17.5</string>
+	<string>iphonesimulator18.2</string>
 	<key>DTXcode</key>
-	<string>1540</string>
+	<string>1620</string>
 	<key>DTXcodeBuild</key>
-	<string>15F31d</string>
+	<string>16C5032a</string>
 	<key>MinimumOSVersion</key>
 	<string>13.0</string>
 	<key>UIDeviceFamily</key>
