--- a/QuickPoseCore.xcframework/ios-arm64_x86_64-simulator/QuickPoseCore.framework/Info.plist
+++ b/QuickPoseCore.xcframework/ios-arm64_x86_64-simulator/QuickPoseCore.framework/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>24F74</string>
+	<string>24G90</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,29 +17,29 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.12</string>
+	<string>1.2.13</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>iPhoneSimulator</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.2.12</string>
+	<string>1.2.13</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>22C146</string>
+	<string>23A339</string>
 	<key>DTPlatformName</key>
 	<string>iphonesimulator</string>
 	<key>DTPlatformVersion</key>
-	<string>18.2</string>
+	<string>26.0</string>
 	<key>DTSDKBuild</key>
-	<string>22C146</string>
+	<string>23A339</string>
 	<key>DTSDKName</key>
-	<string>iphonesimulator18.2</string>
+	<string>iphonesimulator26.0</string>
 	<key>DTXcode</key>
-	<string>1620</string>
+	<string>2601</string>
 	<key>DTXcodeBuild</key>
-	<string>16C5032a</string>
+	<string>17A400</string>
 	<key>MinimumOSVersion</key>
 	<string>13.0</string>
 	<key>UIDeviceFamily</key>
